// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Career level inputs — characterization (F-2) > 'A v1 only · contractStartDate 3.7 y' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'B v1 only · startDate 3.7 y, no contr…' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": null,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'C v2 only (API and apps under newBusi…' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'D mixed: v2 API + one v1 week with 42…' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'E contractStartDate \\'\\' (doCreateUse…' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": null,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'F contractStartDate not YYYY-MM-DD' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": null,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'G contractStartDate 1.9 y' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 1.9,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'H contractStartDate just over 2.0 y' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 2,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'I contractStartDate 5.1 y · 600,000 a…' 1`] = `
{
  "level": 5,
  "quarters": "0,0,0,0,0,0,600,600",
  "trailing2YrAPI": 600000,
  "years": 5.08,
  "ytdAPI": 600000,
  "ytdApps": 52,
}
`;

exports[`Career level inputs — characterization (F-2) > 'J legacy \`api\` field only · 3.7 y' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'K no user fields' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": null,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'L nested schema (step4) · 3.7 y' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'M legacy \`appsSold\` · 3.7 y' 1`] = `
{
  "level": 2,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 42,
}
`;

exports[`Career level inputs — characterization (F-2) > 'N v2 only, 41 apps (one short of leve…' 1`] = `
{
  "level": 1,
  "quarters": "0,0,0,0,0,0,300,300",
  "trailing2YrAPI": 300000,
  "years": 3.71,
  "ytdAPI": 300000,
  "ytdApps": 41,
}
`;
